--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,28 +1,20 @@
-#!/usr/bin/python3
-from flask import Flask, render_template
-from models import storage
-from models.state import State
-from models.city import City
-
-
-app = Flask(__name__)
-
-
-@app.teardown_appcontext
-def tear_down(self):
-    """web flask"""
-    storage.close()
-
-
-@app.route('/cities_by_states', strict_slashes=False)
-def list_states():
-    """web flask"""
-    dict_states = storage.all(State)
-    all_states = []
-    for k, v in dict_states.items():
-        all_states.append(v)
-    return render_template('8-cities_by_states.html', all_states=all_states)
-
-
-if __name__ == "__main__":
-    app.run(host='0.0.0.0', port=5000
+<!DOCTYPE html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>States</H1>
+        <UL>
+        {% for state in states.values()|sort(attribute='name') %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
+                <UL>
+                {% for city in state.cities|sort(attribute='name') %}
+                        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                {% endfor %}
+                </UL>
+            </LI>
+        {% endfor %}
+        </UL>
+    </BODY>
+</HTML>
